2011-06-29  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_dir: fixed the checks on directory permissions
	* check_dir: added unit tests
	* check_dir: fixed the handling of hidden files

2008-03-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_dir: fixed the missing usage message

2008-03-20  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_dir: POD is in a separate file because of ePN
	* check_dir: short options can be bundle and are case sensitive
	
2008-03-18  Matteo Corti  <matteo.corti@id.ethz.ch>

	* VERSION: 2.1.1
	* check_dir: short options
	* check_dir: accepts ranges for critical and warning

2007-11-13  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Makefile.PL: included version.pm in the distribution

2007-10-31  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_dir: bug fix in the threshold check

2007-10-12  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_dir: substituted the usage subroutine with pod2usage

2007-10-05  Matteo Corti  <matteo.corti@id.ethz.ch>

	* VERSION: 2.0.0 (next milestone)
	* check_dir: Uses Nagios::Plugin
	* check_dir: compatible with ePN

2007-02-13  Matteo Corti  <matteo.corti@id.ethz.ch>

	* VERSION 1.2: fixing a typo and adding a makefile to generate the tarball

2006-08-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* VERSION 1.1: added patch from Gunther Schlegel: report if a
	folder does not exist and added the missing "UKNOWN" tag

2006-08-14  Matteo Corti  <matteo.corti@id.ethz.ch>

	* VERSION 1.0: initial release

# File version information
# $Id: README 1238 2011-05-24 06:40:44Z corti $
# $Revision: 1238 $
# $HeadURL: https://svn.id.ethz.ch/nagios_plugins/check_updates/README $
# $Date: 2011-05-24 08:40:44 +0200 (Tue, 24 May 2011) $